Move distribution description closer to its code

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -66,15 +66,8 @@
    "outputs": [],
    "source": [
     "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int, run_in: int) -> tuple:\n",
-    "    gen_desc = '\\n\\n### Generation times\\n' \\\n",
-    "        'Generation times for each day are calculated by ' \\\n",
-    "        'first finding the parameters needed to construct ' \\\n",
-    "        'a gamma distribution with mean and standard deviation ' \\\n",
-    "        'equal to those specified by the submitted parameter values. ' \\\n",
-    "        'The integrals of the probability density of this distribution ' \\\n",
-    "        'between consecutive integer values are then calculated for ' \\\n",
-    "        'later combination with the incidence time series. '\n",
-    "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
+    "    gen_time_dens = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
+    "    densities = gen_time_dens.vals\n",
     "    curve_desc = '\\n\\n### Non-mechanistic process\\n' \\\n",
     "        'The sequence of parameter values pertaining to ' \\\n",
     "        \"the model's non-mechanistic process are first exponentiated, \" \\\n",
@@ -95,8 +88,8 @@
     "    func = get_piecewise_cosine(req_x_vals, process_req)\n",
     "    process_vals = func(np.array([float(t) for t in range(n_times)]))\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
-    "    renewal_output = renew_taper_seed(gen_time_densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
-    "    return ModelResult(renewal_output, process_vals_exp, gen_desc + curve_desc + renewal_output.description)"
+    "    renewal_output = renew_taper_seed(densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
+    "    return ModelResult(renewal_output, process_vals_exp, gen_time_dens.description + curve_desc + renewal_output.description)"
    ]
   },
   {
