Move all descriptions closer to code they relate to

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -68,28 +68,23 @@
     "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int, run_in: int) -> tuple:\n",
     "    gen_time_dens = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
     "    densities = gen_time_dens.vals\n",
-    "    curve_desc = '\\n\\n### Non-mechanistic process\\n' \\\n",
-    "        'The sequence of parameter values pertaining to ' \\\n",
-    "        \"the model's non-mechanistic process are first exponentiated, \" \\\n",
-    "        'such that parameter exploration for these quantities is ' \\\n",
-    "        'undertaken in the log-transformed space. ' \\\n",
+    "\n",
+    "    process_desc = '\\n\\n### Non-mechanistic process\\n' \\\n",
+    "        'The time values corresponding to the submitted process values ' \\\n",
+    "        'are set to be evenly spaced throughout the simulation period. ' \\\n",
     "        'Next, a continuous function of time was constructed from ' \\\n",
     "        'the non-mechanistic process series values submitted to the model. ' \\\n",
-    "        'The fitting function consisted of a piecewise function ' \\\n",
-    "        'constructed from a cosine function on domain zero to $\\pi$. ' \\\n",
-    "        'This function was then translated and scaled vertically and horizontally ' \\\n",
-    "        'such that the starting and ending points of the cosine function ' \\\n",
-    "        '(at which the gradient is zero) pass through the two consecutive ' \\\n",
-    "        'process values. This provides a function of time for which ' \\\n",
-    "        'the gradient and all higher order gradients are continuous. ' \\\n",
-    "        'The time values corresponding to the submitted process values ' \\\n",
-    "        'are set to be evenly spaced throughout the simulation period. '\n",
+    "        'After curve fitting, the sequence of parameter values pertaining to ' \\\n",
+    "        \"the non-mechanistic process are exponentiated, \" \\\n",
+    "        'such that parameter exploration for these quantities is ' \\\n",
+    "        'undertaken in the log-transformed space. '\n",
     "    req_x_vals = np.linspace(0.0, n_times, len(process_req))\n",
-    "    func = get_piecewise_cosine(req_x_vals, process_req)\n",
-    "    process_vals = func(np.array([float(t) for t in range(n_times)]))\n",
+    "    interp = get_piecewise_cosine(req_x_vals, process_req)\n",
+    "    process_vals = interp.func(np.array([float(t) for t in range(n_times)]))\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
+    "\n",
     "    renewal_output = renew_taper_seed(densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
-    "    return ModelResult(renewal_output, process_vals_exp, gen_time_dens.description + curve_desc + renewal_output.description)"
+    "    return ModelResult(renewal_output, process_vals_exp, gen_time_dens.description + process_desc + interp.description + renewal_output.description)"
    ]
   },
   {
