Convert gamma distribution wrangling to object-oriented

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -43,7 +43,7 @@
     "from collections import namedtuple\n",
     "\n",
     "from emu_renewal.renew import renew_taper_seed\n",
-    "from emu_renewal.distributions import get_gamma_densities_from_params\n",
+    "from emu_renewal.distributions import GammaDens\n",
     "from emu_renewal.process import get_spline_interp_func, get_linear_interp_func, get_piecewise_cosine\n",
     "from emu_renewal.outputs import plot_output_fit"
    ]
@@ -66,8 +66,8 @@
    "outputs": [],
    "source": [
     "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int, run_in: int) -> tuple:\n",
-    "    gen_time_dens = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
-    "    densities = gen_time_dens.vals\n",
+    "    dens_obj = GammaDens(gen_time_mean, gen_time_sd)\n",
+    "    densities = dens_obj.get_gamma_densities_from_params(n_times)\n",
     "\n",
     "    process_desc = '\\n\\n### Non-mechanistic process\\n' \\\n",
     "        'The time values corresponding to the submitted process values ' \\\n",
@@ -84,7 +84,7 @@
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
     "\n",
     "    renewal_output = renew_taper_seed(densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
-    "    return ModelResult(renewal_output, process_vals_exp, gen_time_dens.description + process_desc + interp.description + renewal_output.description)"
+    "    return ModelResult(renewal_output, process_vals_exp, '')"
    ]
   },
   {
