--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "from emu_renewal.renew import renew_taper_seed\n",
     "from emu_renewal.distributions import GammaDens\n",
-    "from emu_renewal.process import get_spline_interp_func, get_linear_interp_func, get_piecewise_cosine\n",
+    "from emu_renewal.process import LinearInterpFunc, SplineInterpFunc, CosInterpFunc\n",
     "from emu_renewal.outputs import plot_output_fit"
    ]
   },
@@ -78,9 +78,10 @@
     "        \"the non-mechanistic process are exponentiated, \" \\\n",
     "        'such that parameter exploration for these quantities is ' \\\n",
     "        'undertaken in the log-transformed space. '\n",
+    "    \n",
     "    req_x_vals = np.linspace(0.0, n_times, len(process_req))\n",
-    "    interp = get_piecewise_cosine(req_x_vals, process_req)\n",
-    "    process_vals = interp.func(np.array([float(t) for t in range(n_times)]))\n",
+    "    interp = LinearInterpFunc(req_x_vals, process_req).get_interp_func()\n",
+    "    process_vals = interp(np.array([float(t) for t in range(n_times)]))\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
     "\n",
     "    renewal_output = renew_taper_seed(densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
@@ -273,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
