Start object-orienting the model function

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -55,37 +55,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ModelResult = namedtuple('results', ['outputs', 'process', 'description'])"
+    "ModelResult = namedtuple('results', ['outputs', 'process'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3299a2b-b443-45a8-aa27-a3c90e575b8e",
+   "id": "063972e1-fd16-482b-9185-28ae1b38a374",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int, run_in: int) -> tuple:\n",
-    "    dens_obj = GammaDens(gen_time_mean, gen_time_sd)\n",
-    "    densities = dens_obj.get_gamma_densities_from_params(n_times)\n",
-    "\n",
-    "    process_desc = '\\n\\n### Non-mechanistic process\\n' \\\n",
-    "        'The time values corresponding to the submitted process values ' \\\n",
-    "        'are set to be evenly spaced throughout the simulation period. ' \\\n",
-    "        'Next, a continuous function of time was constructed from ' \\\n",
-    "        'the non-mechanistic process series values submitted to the model. ' \\\n",
-    "        'After curve fitting, the sequence of parameter values pertaining to ' \\\n",
-    "        \"the non-mechanistic process are exponentiated, \" \\\n",
-    "        'such that parameter exploration for these quantities is ' \\\n",
-    "        'undertaken in the log-transformed space. '\n",
+    "class RenewalModel():\n",
+    "    def __init__(self, pop, n_times, run_in):\n",
+    "        self.pop = pop\n",
+    "        self.n_times = n_times\n",
+    "        self.run_in = run_in\n",
     "    \n",
-    "    req_x_vals = np.linspace(0.0, n_times, len(process_req))\n",
-    "    interp = LinearInterpFunc(req_x_vals, process_req).get_interp_func()\n",
-    "    process_vals = interp(np.array([float(t) for t in range(n_times)]))\n",
-    "    process_vals_exp = np.exp(np.array(process_vals))\n",
+    "    def func(self, gen_time_mean: float, gen_time_sd: float, process_req: List[float], seed: int) -> tuple:\n",
+    "        dens_obj = GammaDens(gen_time_mean, gen_time_sd)\n",
+    "        densities = dens_obj.get_gamma_densities_from_params(self.n_times)\n",
     "\n",
-    "    renewal_output = renew_taper_seed(densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
-    "    return ModelResult(renewal_output, process_vals_exp, '')"
+    "        req_x_vals = np.linspace(0.0, n_times, len(process_req))\n",
+    "        interp = LinearInterpFunc(req_x_vals, process_req).get_interp_func()\n",
+    "        process_vals = interp(np.array([float(t) for t in range(self.n_times)]))\n",
+    "        process_vals_exp = np.exp(np.array(process_vals))\n",
+    "\n",
+    "        renewal_output = renew_taper_seed(densities, process_vals_exp, self.pop, np.exp(seed), self.n_times, self.run_in)\n",
+    "        return ModelResult(renewal_output, process_vals_exp)\n",
+    "    \n",
+    "    def get_description(self):\n",
+    "        return '\\n\\n### Non-mechanistic process\\n' \\\n",
+    "            'The time values corresponding to the submitted process values ' \\\n",
+    "            'are set to be evenly spaced throughout the simulation period. ' \\\n",
+    "            'Next, a continuous function of time was constructed from ' \\\n",
+    "            'the non-mechanistic process series values submitted to the model. ' \\\n",
+    "            'After curve fitting, the sequence of parameter values pertaining to ' \\\n",
+    "            \"the non-mechanistic process are exponentiated, \" \\\n",
+    "            'such that parameter exploration for these quantities is ' \\\n",
+    "            'undertaken in the log-transformed space. '"
    ]
   },
   {
@@ -140,9 +147,12 @@
     "    'and the reported case numbers at each date considered. ' \\\n",
     "    'Modelled notifications are calculated as the product of modelled incidence and the ' \\\n",
     "    '(constant through time) case detection proportion. '\n",
+    "\n",
+    "model = RenewalModel(calib_kwargs['pop'], n_times, run_in)\n",
+    "\n",
     "def calib_func(parameters: List[float], pop: int, n_times: int, run_in: int, targets: dict) -> float:\n",
     "    gen_time_mean, gen_time_sd, cdr, seed, *process = parameters\n",
-    "    incidence = model_func(gen_time_mean, gen_time_sd, process, pop, seed, n_times, run_in).outputs.incidence\n",
+    "    incidence = model.func(gen_time_mean, gen_time_sd, process, seed).outputs.incidence\n",
     "    return sum([(incidence[t] * cdr - d) ** 2 for t, d in targets.items()])\n",
     "\n",
     "def obj_func(gen_time_mean, gen_time_sd, cdr_param, seed, proc_params):\n",
@@ -164,8 +174,7 @@
    "source": [
     "#| label: fig-fit\n",
     "#| fig-cap: \"Optimisation to sample data from Malaysia\"\n",
-    "model_result = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[4], 33e6, ngopt_result[3], n_times, run_in)\n",
-    "renewal_desc = model_result.description\n",
+    "model_result = model.func(ngopt_result[0], ngopt_result[1], ngopt_result[4], ngopt_result[3])\n",
     "fig = plot_output_fit(mys_data, model_result.outputs, model_result.process, n_times, cdr=ngopt_result[2])\n",
     "fig.write_image('results_fig.svg')"
    ]
@@ -203,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Markdown(renewal_desc)"
+    "# Markdown(renewal_desc)"
    ]
   },
   {
@@ -274,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
