Externalise interpolation function

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -66,18 +66,20 @@
    "outputs": [],
    "source": [
     "class RenewalModel():\n",
-    "    def __init__(self, pop, n_times, run_in):\n",
+    "    def __init__(self, pop, n_times, run_in, n_process_periods):\n",
     "        self.pop = pop\n",
     "        self.n_times = n_times\n",
     "        self.run_in = run_in\n",
+    "        self.n_process_periods = n_process_periods\n",
+    "        req_x_vals = np.linspace(0.0, n_times, n_process_periods)\n",
+    "        self.interp = CosInterpFunc(req_x_vals)\n",
     "    \n",
     "    def func(self, gen_time_mean: float, gen_time_sd: float, process_req: List[float], seed: int) -> tuple:\n",
     "        dens_obj = GammaDens(gen_time_mean, gen_time_sd)\n",
     "        densities = dens_obj.get_gamma_densities_from_params(self.n_times)\n",
     "\n",
-    "        req_x_vals = np.linspace(0.0, n_times, len(process_req))\n",
-    "        interp = LinearInterpFunc(req_x_vals, process_req).get_interp_func()\n",
-    "        process_vals = interp(np.array([float(t) for t in range(self.n_times)]))\n",
+    "        process_func = self.interp.get_interp_func(process_req)\n",
+    "        process_vals = process_func(np.array([float(t) for t in range(self.n_times)]))\n",
     "        process_vals_exp = np.exp(np.array(process_vals))\n",
     "\n",
     "        renewal_output = renew_taper_seed(densities, process_vals_exp, self.pop, np.exp(seed), self.n_times, self.run_in)\n",
@@ -148,7 +150,7 @@
     "    'Modelled notifications are calculated as the product of modelled incidence and the ' \\\n",
     "    '(constant through time) case detection proportion. '\n",
     "\n",
-    "model = RenewalModel(calib_kwargs['pop'], n_times, run_in)\n",
+    "model = RenewalModel(calib_kwargs['pop'], n_times, run_in, n_process_periods)\n",
     "\n",
     "def calib_func(parameters: List[float], pop: int, n_times: int, run_in: int, targets: dict) -> float:\n",
     "    gen_time_mean, gen_time_sd, cdr, seed, *process = parameters\n",
@@ -163,6 +165,16 @@
     "instrum = ng.p.Instrumentation(*scalar_params, process_params)\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=100)\n",
     "ngopt_result = optimizer.minimize(obj_func).value[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb4cfba8-f16f-4e1f-b02f-cc64f21d4e52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.interp.get_description()"
    ]
   },
   {
