Do similar instantiation for density distribution

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -73,10 +73,11 @@
     "        self.n_process_periods = n_process_periods\n",
     "        req_x_vals = np.linspace(0.0, n_times, n_process_periods)\n",
     "        self.interp = CosInterpFunc(req_x_vals)\n",
+    "        self.dens_obj = GammaDens()\n",
     "    \n",
     "    def func(self, gen_time_mean: float, gen_time_sd: float, process_req: List[float], seed: int) -> tuple:\n",
-    "        dens_obj = GammaDens(gen_time_mean, gen_time_sd)\n",
-    "        densities = dens_obj.get_gamma_densities_from_params(self.n_times)\n",
+    "        self.dens_obj.get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
+    "        densities = self.dens_obj.get_gamma_densities_from_params(self.n_times)\n",
     "\n",
     "        process_func = self.interp.get_interp_func(process_req)\n",
     "        process_vals = process_func(np.array([float(t) for t in range(self.n_times)]))\n",
@@ -175,6 +176,16 @@
    "outputs": [],
    "source": [
     "model.interp.get_description()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61854e0e-303b-4ab3-b290-25303d5c2d78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.dens_obj.describe_dens()"
    ]
   },
   {
