Revise gamma distribution structure

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -76,8 +76,7 @@
     "        self.dens_obj = GammaDens()\n",
     "    \n",
     "    def func(self, gen_time_mean: float, gen_time_sd: float, process_req: List[float], seed: int) -> tuple:\n",
-    "        self.dens_obj.get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
-    "        densities = self.dens_obj.get_gamma_densities_from_params(self.n_times)\n",
+    "        densities = self.dens_obj.get_gamma_densities_from_params(self.n_times, gen_time_mean, gen_time_sd)\n",
     "\n",
     "        process_func = self.interp.get_interp_func(process_req)\n",
     "        process_vals = process_func(np.array([float(t) for t in range(self.n_times)]))\n",
