--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -74,13 +74,13 @@
     "        req_x_vals = np.linspace(0.0, n_times, n_process_periods)\n",
     "        self.interp = CosInterpFunc(req_x_vals)\n",
     "        self.dens_obj = GammaDens()\n",
+    "        self.model_times = np.array([float(t) for t in range(self.n_times)])\n",
     "    \n",
     "    def func(self, gen_time_mean: float, gen_time_sd: float, process_req: List[float], seed: int) -> tuple:\n",
-    "        densities = self.dens_obj.get_gamma_densities_from_params(self.n_times, gen_time_mean, gen_time_sd)\n",
+    "        densities = self.dens_obj.get_densities(self.n_times, gen_time_mean, gen_time_sd)\n",
     "\n",
     "        process_func = self.interp.get_interp_func(process_req)\n",
-    "        process_vals = process_func(np.array([float(t) for t in range(self.n_times)]))\n",
-    "        process_vals_exp = np.exp(np.array(process_vals))\n",
+    "        process_vals_exp = np.exp(np.array(process_func(self.model_times)))\n",
     "\n",
     "        renewal_output = renew_taper_seed(densities, process_vals_exp, self.pop, np.exp(seed), self.n_times, self.run_in)\n",
     "        return ModelResult(renewal_output, process_vals_exp)\n",
