--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -42,20 +42,10 @@
     "from IPython.display import Markdown\n",
     "from collections import namedtuple\n",
     "\n",
-    "from emu_renewal.renew import renew_taper_seed\n",
+    "# from emu_renewal.renew import renew_taper_seed\n",
     "from emu_renewal.distributions import GammaDens\n",
     "from emu_renewal.process import LinearInterpFunc, SplineInterpFunc, CosInterpFunc\n",
     "from emu_renewal.outputs import plot_output_fit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3401b9e3-d1cb-4d01-95de-05dd2fee4ab3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ModelResult = namedtuple('results', ['outputs', 'process'])"
    ]
   },
   {
@@ -65,6 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ModelResult = namedtuple('ModelResult', ['incidence', 'suscept', 'r_t', 'process'])\n",
+    "\n",
     "class RenewalModel():\n",
     "    def __init__(self, pop, n_times, run_in, n_process_periods):\n",
     "        self.pop = pop\n",
@@ -75,15 +67,31 @@
     "        self.interp = CosInterpFunc(req_x_vals)\n",
     "        self.dens_obj = GammaDens()\n",
     "        self.model_times = np.array([float(t) for t in range(self.n_times)])\n",
-    "    \n",
+    "        \n",
     "    def func(self, gen_time_mean: float, gen_time_sd: float, process_req: List[float], seed: int) -> tuple:\n",
     "        densities = self.dens_obj.get_densities(self.n_times, gen_time_mean, gen_time_sd)\n",
-    "\n",
     "        process_func = self.interp.get_interp_func(process_req)\n",
     "        process_vals_exp = np.exp(np.array(process_func(self.model_times)))\n",
+    "        \n",
+    "        incidence = np.zeros(self.n_times)\n",
+    "        suscept = np.zeros(self.n_times)\n",
+    "        r_t = np.zeros(self.n_times)\n",
     "\n",
-    "        renewal_output = renew_taper_seed(densities, process_vals_exp, self.pop, np.exp(seed), self.n_times, self.run_in)\n",
-    "        return ModelResult(renewal_output, process_vals_exp)\n",
+    "        seed_peak = np.exp(seed)\n",
+    "        incidence[0] = seed_peak\n",
+    "        suscept[0] = self.pop - seed_peak\n",
+    "        r_t[0] = process_vals_exp[0] * suscept[0] / self.pop\n",
+    "\n",
+    "        seed_func = CosInterpFunc([seed_peak, 0.0]).get_interp_func([0.0, self.run_in])\n",
+    "        for t in range(1, self.n_times):\n",
+    "            r_t[t] = process_vals_exp[t] * suscept[t - 1] / self.pop\n",
+    "            contribution_by_day = incidence[:t] * densities[:t][::-1]\n",
+    "            seeding_component = seed_func(t)\n",
+    "            renewal_component = contribution_by_day.sum() * r_t[t]\n",
+    "            incidence[t] = seeding_component + renewal_component\n",
+    "            suscept[t] = max(suscept[t - 1] - incidence[t], 0.0)\n",
+    "\n",
+    "        return ModelResult(incidence, suscept, r_t, process_vals_exp)\n",
     "    \n",
     "    def get_description(self):\n",
     "        return '\\n\\n### Non-mechanistic process\\n' \\\n",
@@ -154,7 +162,7 @@
     "\n",
     "def calib_func(parameters: List[float], pop: int, n_times: int, run_in: int, targets: dict) -> float:\n",
     "    gen_time_mean, gen_time_sd, cdr, seed, *process = parameters\n",
-    "    incidence = model.func(gen_time_mean, gen_time_sd, process, seed).outputs.incidence\n",
+    "    incidence = model.func(gen_time_mean, gen_time_sd, process, seed).incidence\n",
     "    return sum([(incidence[t] * cdr - d) ** 2 for t, d in targets.items()])\n",
     "\n",
     "def obj_func(gen_time_mean, gen_time_sd, cdr_param, seed, proc_params):\n",
@@ -197,7 +205,7 @@
     "#| label: fig-fit\n",
     "#| fig-cap: \"Optimisation to sample data from Malaysia\"\n",
     "model_result = model.func(ngopt_result[0], ngopt_result[1], ngopt_result[4], ngopt_result[3])\n",
-    "fig = plot_output_fit(mys_data, model_result.outputs, model_result.process, n_times, cdr=ngopt_result[2])\n",
+    "fig = plot_output_fit(mys_data, model_result, n_times, cdr=ngopt_result[2])\n",
     "fig.write_image('results_fig.svg')"
    ]
   },
