Comment distribution file

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -94,7 +94,22 @@
     "        return ModelResult(incidence, suscept, r_t, process_vals_exp)\n",
     "    \n",
     "    def get_description(self):\n",
-    "        return '\\n\\n### Non-mechanistic process\\n' \\\n",
+    "        renew_desc = '\\n\\n### Renewal process\\n' \\\n",
+    "            'Calculation of the renewal process ' \\\n",
+    "            'consists of multiplying the incidence values for the preceding days ' \\\n",
+    "            'by the reversed generation time distribution values. ' \\\n",
+    "            'This follows a standard formula, ' \\\n",
+    "            'described elsewhere by several groups,[@cori2013; @faria2021] i.e. ' \\\n",
+    "            '$$i_t = R_t\\sum_{\\\\tau<t} i_\\\\tau g_{t-\\\\tau}$$\\n' \\\n",
+    "            '$R_t$ is calculated as the product of the proportion ' \\\n",
+    "            'of the population remaining susceptible ' \\\n",
+    "            'and the non-mechanistic random process ' \\\n",
+    "            'generated external to the renewal model. ' \\\n",
+    "            'The susceptible population is calculated by ' \\\n",
+    "            'subtracting the number of new incident cases from the ' \\\n",
+    "            'running total of susceptibles at each iteration.\\n'\n",
+    "        \n",
+    "        non_mech_desc = '\\n\\n### Non-mechanistic process\\n' \\\n",
     "            'The time values corresponding to the submitted process values ' \\\n",
     "            'are set to be evenly spaced throughout the simulation period. ' \\\n",
     "            'Next, a continuous function of time was constructed from ' \\\n",
@@ -102,7 +117,9 @@
     "            'After curve fitting, the sequence of parameter values pertaining to ' \\\n",
     "            \"the non-mechanistic process are exponentiated, \" \\\n",
     "            'such that parameter exploration for these quantities is ' \\\n",
-    "            'undertaken in the log-transformed space. '"
+    "            'undertaken in the log-transformed space. '\n",
+    "        \n",
+    "        return self.dens_obj.get_description() + renew_desc + non_mech_desc + self.interp.get_description()"
    ]
   },
   {
@@ -114,12 +131,12 @@
    "source": [
     "# Data and fixed parameters\n",
     "run_in = 30\n",
+    "n_process_periods = 12\n",
     "raw_data = pd.read_csv('https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv', index_col=0)['MYS']\n",
     "raw_data.index = pd.to_datetime(raw_data.index)\n",
     "mys_data = raw_data.loc[datetime(2021, 3, 1): datetime(2021, 11, 1)].reset_index()['MYS']\n",
     "mys_data.index += run_in\n",
     "n_times = len(mys_data) + run_in\n",
-    "n_process_periods = 12\n",
     "calib_kwargs = {'pop': 33e6, 'n_times': n_times, 'run_in': run_in, 'targets': mys_data}\n",
     "fixed_param_desc = '### Fixed parameter values\\n ' \\\n",
     "    f'The target population is initialised as {str(int(calib_kwargs[\"pop\"]))} susceptible persons. ' \\\n",
@@ -178,26 +195,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb4cfba8-f16f-4e1f-b02f-cc64f21d4e52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.interp.get_description()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61854e0e-303b-4ab3-b290-25303d5c2d78",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.dens_obj.describe_dens()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "c7f2f233-e997-48ed-b02c-1b1ffdcecc72",
    "metadata": {},
    "outputs": [],
@@ -242,7 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Markdown(renewal_desc)"
+    "Markdown(model.get_description())"
    ]
   },
   {
