Move renewal function out to py file

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -42,84 +42,8 @@
     "from IPython.display import Markdown\n",
     "from collections import namedtuple\n",
     "\n",
-    "# from emu_renewal.renew import renew_taper_seed\n",
-    "from emu_renewal.distributions import GammaDens\n",
-    "from emu_renewal.process import LinearInterpFunc, SplineInterpFunc, CosInterpFunc\n",
+    "from emu_renewal.renew import RenewalModel\n",
     "from emu_renewal.outputs import plot_output_fit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "063972e1-fd16-482b-9185-28ae1b38a374",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ModelResult = namedtuple('ModelResult', ['incidence', 'suscept', 'r_t', 'process'])\n",
-    "\n",
-    "class RenewalModel():\n",
-    "    def __init__(self, pop, n_times, run_in, n_process_periods):\n",
-    "        self.pop = pop\n",
-    "        self.n_times = n_times\n",
-    "        self.run_in = run_in\n",
-    "        self.n_process_periods = n_process_periods\n",
-    "        req_x_vals = np.linspace(0.0, n_times, n_process_periods)\n",
-    "        self.interp = CosInterpFunc(req_x_vals)\n",
-    "        self.dens_obj = GammaDens()\n",
-    "        self.model_times = np.array([float(t) for t in range(self.n_times)])\n",
-    "        \n",
-    "    def func(self, gen_time_mean: float, gen_time_sd: float, process_req: List[float], seed: int) -> tuple:\n",
-    "        densities = self.dens_obj.get_densities(self.n_times, gen_time_mean, gen_time_sd)\n",
-    "        process_func = self.interp.get_interp_func(process_req)\n",
-    "        process_vals_exp = np.exp(np.array(process_func(self.model_times)))\n",
-    "        \n",
-    "        incidence = np.zeros(self.n_times)\n",
-    "        suscept = np.zeros(self.n_times)\n",
-    "        r_t = np.zeros(self.n_times)\n",
-    "\n",
-    "        seed_peak = np.exp(seed)\n",
-    "        incidence[0] = seed_peak\n",
-    "        suscept[0] = self.pop - seed_peak\n",
-    "        r_t[0] = process_vals_exp[0] * suscept[0] / self.pop\n",
-    "\n",
-    "        seed_func = CosInterpFunc([seed_peak, 0.0]).get_interp_func([0.0, self.run_in])\n",
-    "        for t in range(1, self.n_times):\n",
-    "            r_t[t] = process_vals_exp[t] * suscept[t - 1] / self.pop\n",
-    "            contribution_by_day = incidence[:t] * densities[:t][::-1]\n",
-    "            seeding_component = seed_func(t)\n",
-    "            renewal_component = contribution_by_day.sum() * r_t[t]\n",
-    "            incidence[t] = seeding_component + renewal_component\n",
-    "            suscept[t] = max(suscept[t - 1] - incidence[t], 0.0)\n",
-    "\n",
-    "        return ModelResult(incidence, suscept, r_t, process_vals_exp)\n",
-    "    \n",
-    "    def get_description(self):\n",
-    "        renew_desc = '\\n\\n### Renewal process\\n' \\\n",
-    "            'Calculation of the renewal process ' \\\n",
-    "            'consists of multiplying the incidence values for the preceding days ' \\\n",
-    "            'by the reversed generation time distribution values. ' \\\n",
-    "            'This follows a standard formula, ' \\\n",
-    "            'described elsewhere by several groups,[@cori2013; @faria2021] i.e. ' \\\n",
-    "            '$$i_t = R_t\\sum_{\\\\tau<t} i_\\\\tau g_{t-\\\\tau}$$\\n' \\\n",
-    "            '$R_t$ is calculated as the product of the proportion ' \\\n",
-    "            'of the population remaining susceptible ' \\\n",
-    "            'and the non-mechanistic random process ' \\\n",
-    "            'generated external to the renewal model. ' \\\n",
-    "            'The susceptible population is calculated by ' \\\n",
-    "            'subtracting the number of new incident cases from the ' \\\n",
-    "            'running total of susceptibles at each iteration.\\n'\n",
-    "        \n",
-    "        non_mech_desc = '\\n\\n### Non-mechanistic process\\n' \\\n",
-    "            'The time values corresponding to the submitted process values ' \\\n",
-    "            'are set to be evenly spaced throughout the simulation period. ' \\\n",
-    "            'Next, a continuous function of time was constructed from ' \\\n",
-    "            'the non-mechanistic process series values submitted to the model. ' \\\n",
-    "            'After curve fitting, the sequence of parameter values pertaining to ' \\\n",
-    "            \"the non-mechanistic process are exponentiated, \" \\\n",
-    "            'such that parameter exploration for these quantities is ' \\\n",
-    "            'undertaken in the log-transformed space. '\n",
-    "        \n",
-    "        return self.dens_obj.get_description() + renew_desc + non_mech_desc + self.interp.get_description()"
    ]
   },
   {
