Get first two notebooks running again after changes to the later one

--- a/renew/01basics.ipynb
+++ b/renew/01basics.ipynb
@@ -47,9 +47,7 @@
     "from scipy.stats import gamma\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "pd.options.plotting.backend = 'plotly'\n",
-    "\n",
-    "from emu_renewal.distributions import get_gamma_params_from_mean_sd"
+    "pd.options.plotting.backend = 'plotly'"
    ]
   },
   {
@@ -94,10 +92,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generation time parameters\n",
+    "# Generation time summary statistics\n",
     "req_sd = 1.5\n",
     "req_mean = 5.0\n",
-    "gamma_params = get_gamma_params_from_mean_sd(req_mean, req_sd)\n",
+    "\n",
+    "# Calculate equivalent parameters\n",
+    "var = req_sd ** 2.0\n",
+    "scale = var / req_mean\n",
+    "a = req_mean / scale\n",
+    "gamma_params = {'a': a, 'scale': scale}\n",
     "\n",
     "# Get the increment in the CDF\n",
     "# (i.e. the integral over the increment by one in the distribution)\n",
@@ -227,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
