--- a/renew/03vary-r.ipynb
+++ b/renew/03vary-r.ipynb
@@ -35,7 +35,7 @@
     "import pandas as pd\n",
     "pd.options.plotting.backend = 'plotly'\n",
     "\n",
-    "from emu_renewal.distributions import get_gamma_params_from_mean_sd"
+    "from emu_renewal.distributions import GammaDens"
    ]
   },
   {
@@ -63,11 +63,10 @@
     "pop = 100.0\n",
     "incidence = np.zeros(n_times)\n",
     "incidence[0] = seed\n",
-    "gen_time_sd = 1.5\n",
     "gen_time_mean = 5.0\n",
+    "gen_time_sd = 1.5\n",
     "\n",
-    "gamma_params = get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
-    "gen_time_densities = np.diff(gamma.cdf(range(n_times + 1), **gamma_params))"
+    "gen_time_densities = GammaDens().get_densities(n_times, gen_time_mean, gen_time_sd)"
    ]
   },
   {
