Allow for truncation of generation times

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -42,7 +42,7 @@
     "from IPython.display import Markdown\n",
     "from collections import namedtuple\n",
     "\n",
-    "from emu_renewal.renew import RenewalModel\n",
+    "from emu_renewal.renew import RenewalModel, TruncRenewalModel\n",
     "from emu_renewal.outputs import plot_output_fit"
    ]
   },
@@ -99,7 +99,7 @@
     "    'Modelled notifications are calculated as the product of modelled incidence and the ' \\\n",
     "    '(constant through time) case detection proportion. '\n",
     "\n",
-    "model = RenewalModel(calib_kwargs['pop'], n_times, run_in, n_process_periods)\n",
+    "model = TruncRenewalModel(calib_kwargs['pop'], n_times, run_in, n_process_periods)\n",
     "\n",
     "def calib_func(parameters: List[float], pop: int, n_times: int, run_in: int, targets: dict) -> float:\n",
     "    gen_time_mean, gen_time_sd, cdr, seed, *process = parameters\n",
