Keep code for both with and without truncation options

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -88,6 +88,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5fad6c70-d230-457d-ac10-9126ef0929b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the renewal model object - choosing between standard and with truncated generation times\n",
+    "model = RenewalModel(calib_kwargs['pop'], n_times, run_in, n_process_periods)\n",
+    "\n",
+    "# long_gen_densities = model.dens_obj.get_densities(\n",
+    "#     100, \n",
+    "#     scalar_req['Generation time mean (days)']['upper'], \n",
+    "#     scalar_req['Generation time standard deviation (days)']['upper'],\n",
+    "# )\n",
+    "# gen_times_end = np.argmax(long_gen_densities.cumsum() > 0.999)\n",
+    "# model = TruncRenewalModel(calib_kwargs['pop'], n_times, run_in, n_process_periods, gen_times_end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bc7458b1-8c73-4e6d-9358-b9d056276fa0",
    "metadata": {},
    "outputs": [],
@@ -99,7 +118,6 @@
     "    'Modelled notifications are calculated as the product of modelled incidence and the ' \\\n",
     "    '(constant through time) case detection proportion. '\n",
     "\n",
-    "model = RenewalModel(calib_kwargs['pop'], n_times, run_in, n_process_periods)\n",
     "\n",
     "def calib_func(parameters: List[float], pop: int, n_times: int, run_in: int, targets: dict) -> float:\n",
     "    gen_time_mean, gen_time_sd, cdr, seed, *process = parameters\n",
