Move first example in notebook 04 to new structure

--- a/renew/04optimise-against-model-data.ipynb
+++ b/renew/04optimise-against-model-data.ipynb
@@ -28,9 +28,7 @@
     "from scipy.optimize import minimize, shgo\n",
     "import nevergrad as ng\n",
     "\n",
-    "from emu_renewal.distributions import get_gamma_params_from_mean_sd, get_gamma_densities_from_params\n",
-    "from emu_renewal.process import get_spline_interp_func, get_linear_interp_func, get_piecewise_cosine\n",
-    "from emu_renewal.renew import renew_basic\n",
+    "from emu_renewal.renew import RenewalModel\n",
     "from emu_renewal.outputs import Outputs, plot_output_fit"
    ]
   },
@@ -41,61 +39,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int) -> tuple:\n",
-    "    \"\"\"The common features of the model.\n",
-    "    Get the generation time distribution from the user request,\n",
-    "    linearly interpolate the non-mechanistic process,\n",
-    "    exponentiate the result and run the renewal process.\n",
-    "    \"\"\"\n",
-    "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
-    "    req_x_vals = np.linspace(0.0, n_times, len(process_req))\n",
-    "    func = get_linear_interp_func(req_x_vals, process_req)\n",
-    "    process_vals = func(np.array([float(t) for t in range(n_times)]))\n",
-    "    process_vals_exp = np.exp(np.array(process_vals))\n",
-    "    model_result = renew_basic(gen_time_densities, process_vals_exp, pop, seed, n_times)\n",
-    "    return model_result, process_vals_exp\n",
+    "# def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int) -> tuple:\n",
+    "#     \"\"\"The common features of the model.\n",
+    "#     Get the generation time distribution from the user request,\n",
+    "#     linearly interpolate the non-mechanistic process,\n",
+    "#     exponentiate the result and run the renewal process.\n",
+    "#     \"\"\"\n",
+    "#     gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
+    "#     req_x_vals = np.linspace(0.0, n_times, len(process_req))\n",
+    "#     func = get_linear_interp_func(req_x_vals, process_req)\n",
+    "#     process_vals = func(np.array([float(t) for t in range(n_times)]))\n",
+    "#     process_vals_exp = np.exp(np.array(process_vals))\n",
+    "#     model_result = renew_basic(gen_time_densities, process_vals_exp, pop, seed, n_times)\n",
+    "#     return model_result, process_vals_exp\n",
     "\n",
-    "def process_calib_func(parameters: List[float], gen_time_mean, gen_time_sd, pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
-    "    \"\"\"Only optimise the non-mechanistic process parameters,\n",
-    "    least squares loss function.\n",
-    "    \"\"\"\n",
-    "    incidence = model_func(gen_time_mean, gen_time_sd, parameters, pop, seed, n_times)[0][0]\n",
-    "    return sum([(incidence[t] - d) ** 2 for t, d in targets.items()])    \n",
+    "# def process_calib_func(parameters: List[float], gen_time_mean, gen_time_sd, pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
+    "#     \"\"\"Only optimise the non-mechanistic process parameters,\n",
+    "#     least squares loss function.\n",
+    "#     \"\"\"\n",
+    "#     incidence = model_func(gen_time_mean, gen_time_sd, parameters, pop, seed, n_times)[0][0]\n",
+    "#     return sum([(incidence[t] - d) ** 2 for t, d in targets.items()])    \n",
     "\n",
-    "def all_param_calib_func(parameters: List[float], pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
-    "    \"\"\"Additionally include the generation time parameters as parameters,\n",
-    "    least squares loss function.\n",
-    "    \"\"\"\n",
-    "    gen_time_mean, gen_time_sd, *process_req = parameters\n",
-    "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times)[0][0]\n",
-    "    return sum([(incidence[t] - d) ** 2 for t, d in targets.items()])"
+    "# def all_param_calib_func(parameters: List[float], pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
+    "#     \"\"\"Additionally include the generation time parameters as parameters,\n",
+    "#     least squares loss function.\n",
+    "#     \"\"\"\n",
+    "#     gen_time_mean, gen_time_sd, *process_req = parameters\n",
+    "#     incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times)[0][0]\n",
+    "#     return sum([(incidence[t] - d) ** 2 for t, d in targets.items()])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37777223-4e4b-4b55-b6a0-122cf31a2ffa",
+   "id": "14fafa18-a445-4df5-a223-ed02eb23f542",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_times = 40\n",
-    "infectious_seed = 1.0\n",
-    "population = 100.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df78149a-a282-4a1f-9933-c7156edc3f83",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_times = pd.Series(range(n_times))\n",
-    "test_gen_mean = 5.5\n",
-    "test_gen_sd = 1.8\n",
     "test_process = [1.8, 2.5, 1.6, 0.7]\n",
-    "test_data, _ = model_func(5.5, 1.8, np.log(test_process), population, infectious_seed, n_times)\n",
-    "test_vals = pd.Series(test_data.incidence, index=model_times)"
+    "n_times = 40\n",
+    "model = RenewalModel(100.0, n_times, 10, 5)\n",
+    "gen_mean = 5.5\n",
+    "gen_sd = 1.8\n",
+    "seed = 1.0\n",
+    "test_results = model.func(gen_mean, gen_sd, np.log(test_process), seed)\n",
+    "\n",
+    "def calib_func(parameters: List[float], targets: dict) -> float:\n",
+    "    incidence = model.func(gen_mean, gen_sd, parameters, seed).incidence\n",
+    "    return sum([(incidence[t] - d) ** 2 for t, d in enumerate(targets)])"
    ]
   },
   {
@@ -117,7 +108,19 @@
    "outputs": [],
    "source": [
     "param_bounds = [[-1000.0, np.log(10.0)]] * 4\n",
-    "result = minimize(process_calib_func, [np.log(2.0)] * 4, method='Nelder-Mead', args=(test_gen_mean, test_gen_sd, population, infectious_seed, n_times, test_vals), bounds=param_bounds)\n"
+    "result = minimize(calib_func, [np.log(2.0)] * 4, method='Nelder-Mead', args=(test_results.incidence), bounds=param_bounds)\n",
+    "print(f'target: {test_process}')\n",
+    "print(f'result: {np.exp(result.x)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb0b26fc-8d0c-41d0-80d9-187f386c442c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_output_fit(pd.Series(test_results.incidence), test_results, 40, 1.0)"
    ]
   },
   {
